--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000" />
     
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
+    
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.pinimg.com/originals/fa/e3/50/fae3502d9ae5bd84f4f0a1fefb0b653b.png">
 
     <title>MeuProf</title>
   </head>
