--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
     
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.pinimg.com/originals/fa/e3/50/fae3502d9ae5bd84f4f0a1fefb0b653b.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://media-public.canva.com/z5DAs/MAA9p8z5DAs/4/s.svg">
 
     <title>MeuProf</title>
   </head>
